crates/wdl-analysis/tests/validation/duplicate-input/source.errors
error: task `t` contains a duplicate input section
  ┌─ tests/validation/duplicate-input/source.wdl:8:5
  │
6 │     input {}
  │     ----- first input section is defined here
7 │ 
8 │     input {}
  │     ^^^^^ this input section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-input/source.wdl:14:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
14 │ task t {
   │      ^ this task conflicts with a previously used name

error: workflow `w` contains a duplicate input section
   ┌─ tests/validation/duplicate-input/source.wdl:25:5
   │
23 │     input {}
   │     ----- first input section is defined here
24 │ 
25 │     input {}
   │     ^^^^^ this input section is a duplicate

